<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/helvetica_roman"
        android:hint="@string/dSelect_tvSelectCurrency"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <RelativeLayout
        android:id="@+id/rlCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDialogTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tvCurrentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica_roman"
            android:hint="@string/config_selected"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/tvCurrentTitle"
            android:fontFamily="@font/helvetica_roman"
            android:hint="$"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/listViewCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlCurrent"
        android:layout_marginTop="10dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/listViewCurrency"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/helvetica_roman"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/button_btnCancel"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tvCancel"
            android:background="@drawable/drawable_default_btn"
            android:fontFamily="@font/helvetica_roman"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/button_btnConfirm"
            android:textColor="@color/colorLightGray" />

    </RelativeLayout>


</RelativeLayout>